# FNBBMusicBot

./: README.md  makefile  pyproject.toml
BOT/: bot.py
BOT/cogs/: stream.py
